--- a/package.json
+++ b/package.json
@@ -1,3 +1,15 @@
 {
     
+"dependencies": {
+    
+    
+"next": "^15.2.4",
+    
+    
+"react": "^19.0.0",
+    
+    
+"react-dom": "^19.0.0"
+    
+}
 }
