--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
+"scripts": {
+"dev": "next dev"
+},
     
-"dependencies": {
-    
-    
+"dependencies": {   
 "next": "^15.2.4",
-    
-    
 "react": "^19.0.0",
-    
-    
 "react-dom": "^19.0.0"
-    
-}
+    }
 }
